--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f8f9fa;
+    
+    justify-content: center;
     margin: 0;
     padding: 0;
-
     font-family: '맑은 고딕', 'Malgun Gothic', Arial, sans-serif;
     /* 원하는 폰트 이름으로 변경 */
     font-size: 12px;
